TWINS-221: Refactor specifications to enhance domain ID checks.
Consolidated and streamlined domain ID checks across services and specifications by reusing utility methods. This change simplifies the codebase, reduces redundancy, and ensures consistent functionality.